--- a/assets/scss/_default.layout.scss
+++ b/assets/scss/_default.layout.scss
@@ -1,11 +1,17 @@
-.default-layout {
-   height: 100vh;
-   overflow: hidden;
-   display: flex;
-   flex-direction: column;
-}
-.nuxt-content {
-   overflow: hidden;
-   height: 100%;
-   overflow-y: auto;
-}
+// .default-nav {
+//    position: sticky;
+//    top: 0;
+//    width: 100%;
+// }
+
+// .default-layout {
+//    height: 100vh;
+//    overflow: hidden;
+//    display: flex;
+//    flex-direction: column;
+// }
+// .nuxt-content {
+//    overflow: hidden;
+//    height: 100%;
+//    overflow-y: auto;
+// }
