--- a/assets/scss/_items.scss
+++ b/assets/scss/_items.scss
@@ -30,6 +30,9 @@
       &.active {
          color: red;
       }
+      &:hover {
+         color: red;
+      }
    }
    &__element {
       margin-top: 138px;
