--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -10,12 +10,16 @@
       align-items: center;
    }
    &__link {
+      text-decoration: none;
       color: #000;
       text-align: center;
       font-family: Montserrat;
       font-size: 20px;
       font-weight: 700;
       &.active {
+         color: red;
+      }
+      &:hover {
          color: red;
       }
    }
