--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,6 +1,6 @@
 .header {
    height: 441px;
-   background: #EEE;
+   background: #eee;
    &__wrapper {
       padding-top: 43px;
       display: flex;
@@ -11,7 +11,9 @@
    }
    &__title {
       color: #000;
-      font-feature-settings: 'clig' off, 'liga' off;
+      font-feature-settings:
+         "clig" off,
+         "liga" off;
       font-family: Montserrat;
       font-size: 25px;
       font-weight: 500;
