uppercase naming fix

--- a/assets/scss/_slides.scss
+++ b/assets/scss/_slides.scss
@@ -8,9 +8,10 @@
         display: flex;
         gap: 40px;
         justify-content: center;
+        align-items: center;
     }
     &__element-descr {
-        margin-top: 51px;
+        //margin-top: 51px;
     }
 
     &__element-title {
