refactoring slider, bug fix

--- a/assets/scss/_btn.scss
+++ b/assets/scss/_btn.scss
@@ -1,27 +1,28 @@
 .btn {
-   color: #000;
-   font-family: Inter;
-   font-size: 16px;
-   font-weight: 400;
-   display: flex;
-   width: 201px;
-   height: 54px;
-   justify-content: center;
-   align-items: center;
-   color: #fff;
-   text-align: center;
-   font-family: Inter;
-   font-size: 20px;
-   font-weight: 400;
-   background: #f00;
-   border: none;
-   border-radius: unset;
-   &:hover {
-      color: #fff;
-      background: #cc0000;
-   }
-   &:active {
-      background-color: black;
-      color: #fff;
-   }
+    cursor: pointer;
+    color: #000;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    display: flex;
+    width: 201px;
+    height: 54px;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    background: #f00;
+    border: none;
+    border-radius: unset;
+    &:hover {
+        color: #fff;
+        background: #cc0000;
+    }
+    &:active {
+        background-color: black;
+        color: #fff;
+    }
 }
