--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,18 +9,19 @@
 @import "scss/default.layout";
 @import "scss/slides";
 @import "scss/footer";
+@import "scss/media";
 
 .default-layout {
-   height: 100vh;
-   overflow: hidden;
-   display: flex;
-   flex-direction: column;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 .nuxt-content {
-   overflow: hidden;
-   height: 100%;
-   overflow-y: auto;
-   scroll-behavior: smooth;
+    overflow: hidden;
+    height: 100%;
+    overflow-y: auto;
+    scroll-behavior: smooth;
 }
 
 // .nuxt-content {
@@ -28,12 +29,12 @@
 // }
 
 body {
-   padding: 0;
-   margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .container {
-   width: 1310px;
-   margin: 0 auto;
-   height: 100%;
+    max-width: 1310px;
+    margin: 0 auto;
+    height: 100%;
 }
