--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,46 +1,45 @@
 .header {
-   background: #eee;
-   padding-bottom: 30px;
-   &__wrapper {
-      padding-top: 43px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-   }
-   &__descr {
-      max-width: 568px;
-   }
-   &__title {
-      color: #000;
-      font-feature-settings:
-         "clig" off,
-         "liga" off;
-      font-family: Montserrat;
-      font-size: 25px;
-      font-weight: 500;
-      margin-top: 23px;
-   }
-   &__subtitle {
-      color: #000;
-      font-family: Inter;
-      font-size: 20px;
-      font-weight: 500;
-      margin-top: 14px;
-   }
-   &__text {
-      color: #000;
-      font-family: Inter;
-      font-size: 16px;
-      font-weight: 400;
-      margin-top: 14px;
-   }
-   &__img {
-      width: 614px;
-      height: 321px;
-      fill: #808080;
-      object-fit: cover;
-   }
-   &__btn {
-      margin-top: 30px;
-   }
+    background: #eee;
+    padding-bottom: 30px;
+    &__wrapper {
+        padding-top: 43px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 50px;
+    }
+    &__descr {
+        width: 50%;
+    }
+    &__title {
+        color: #000;
+        font-family: Montserrat;
+        font-size: 25px;
+        font-weight: 500;
+        margin-top: 23px;
+    }
+    &__subtitle {
+        color: #000;
+        font-family: Inter;
+        font-size: 20px;
+        font-weight: 500;
+        margin-top: 14px;
+    }
+    &__text {
+        color: #000;
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        margin-top: 14px;
+    }
+    &__img {
+        width: 50%;
+        max-width: 614px;
+        height: auto;
+        fill: #808080;
+        object-fit: cover;
+    }
+    &__btn {
+        margin-top: 30px;
+    }
 }
